core/roboconf-core/src/test/resources/configurations/valid/special-names.graph

ImportingComponent {
	installer: target;
}

ExportingComponent {
	installer: target;
}

FacetComponent {
	installer: target;
}

InstanceOfComponent {
	installer: target;
}
