core/roboconf-core/src/test/resources/configurations/invalid/conflicting-names.graph

type {
	installer: target;
	facets: type;
}

facet type {
	# nothing
}
